feat: 単価，不良品のダミーデータ追加，一覧，削除コマンドを追加
